New Model ActivityTracking and DateWise Report
